manifests-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: validate
  name: validate
  namespace: infra-webhooks
spec:
  ports:
  - name: 8443-8443
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: validate
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
