manifests-k8s/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validate.infra-webhooks.svc.cluster.local
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiVENDQWxXZ0F3SUJBZ0lVQnVUVkk2L1dYbituY2krdzBtMENKUkFmZlpvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1JqRWtNQ0lHQTFVRUF3d2JkbUZzYVdSaGRHVXVhVzVtY21FdGQyVmlhRzl2YTNNdWMzWmpNUXN3Q1FZRApWUVFHRXdKVlV6RVJNQThHQTFVRUJ3d0lWbUZzYUdGc2JHRXdIaGNOTWpJd056SXhNREF3TnpRNVdoY05Nak13Ck56RXlNREF3TnpRNVdqQkdNU1F3SWdZRFZRUUREQnQyWVd4cFpHRjBaUzVwYm1aeVlTMTNaV0pvYjI5cmN5NXoKZG1NeEN6QUpCZ05WQkFZVEFsVlRNUkV3RHdZRFZRUUhEQWhXWVd4b1lXeHNZVENDQVNJd0RRWUpLb1pJaHZjTgpBUUVCQlFBRGdnRV [...]
    service:
      name: validate
      namespace: infra-webhooks
      path: /validate/
      port: 8443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.infra-webhooks.svc.cluster.local
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - DELETE
    resources:
    - projects
    - namespaces
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
